# REVENANT-MINI

./: .git-test  .gitignore  LICENSE  README.md  pyproject.toml  requirements-termux.txt  requirements.txt
configs/: controller.example.toml  worker.example.toml
install/: install.sh
revenant_mini/: __init__.py  banner.py  broker.py  cli.py  controller.py  protocol.py  telemetry.py  topics.py  tui.py  utils.py  worker.py
scripts/: smoke-test.sh  start-broker.sh
